objects/Language_Display_Name__c.object
<CustomObject><fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Language Display Names</relationshipLabel>
        <relationshipName>Language_Display_Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Language_code__c</fullName>
        <label>Language_code</label>
        <length>20</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Contains the display names</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Language Display Name</label><nameField>
        <label>Language Code</label>
        <type>Text</type>
    </nameField><pluralLabel>Language Display Names</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Language_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>